--- a/src/HowToOptimizeGemm/makefile
+++ b/src/HowToOptimizeGemm/makefile
@@ -1,5 +1,5 @@
-OLD  := MMult_4x4_13
-NEW  := MMult_4x4_14
+OLD  := MMult_4x4_14
+NEW  := MMult_4x4_15
 
 #
 # sample makefile
@@ -7,8 +7,8 @@ NEW  := MMult_4x4_14
 
 CC         := gcc
 LINKER     := $(CC)
-#CFLAGS     := -O0 -g -Wall
-CFLAGS     := -O2 -Wall
+CFLAGS     := -O0 -g -Wall
+#CFLAGS     := -O2 -Wall
 LDFLAGS    := -lm
 
 UTIL       := copy_matrix.o \
