feat(cuda): add naive cuda version

--- a/src/HowToOptimizeGemm/makefile
+++ b/src/HowToOptimizeGemm/makefile
@@ -1,6 +1,8 @@
 OLD  := MMult_cuBLAS_1
 NEW  := MMult_cuBLAS_1
-SMS ?= 35 37 50 52 60 61 70 75 86
+
+# NEW  := MMult_cuda_2
+SMS ?= 70 75 80 86
 
 #
 # sample makefile
@@ -10,8 +12,8 @@ CC         := nvcc
 LINKER     := $(CC)
 #CFLAGS     := -O0 -g -Wall
 $(foreach sm,$(SMS),$(eval GENCODE_FLAGS += -gencode arch=compute_$(sm),code=sm_$(sm)))
-CFLAGS     := -std=c++11 -O3
-LDFLAGS    := -lm  -lcublas
+CFLAGS     := -std=c++17 -O3 -g
+LDFLAGS    := -lm  -lcublas  -lopenblas
 
 UTIL       := copy_matrix.o \
               compare_matrices.o \
@@ -22,7 +24,10 @@ UTIL       := copy_matrix.o \
 
 TEST_OBJS  := test_MMult.o $(NEW).o 
 
-%.o: %.c
+%.o: %.cpp
+	$(CC) $(CFLAGS) $(GENCODE_FLAGS)  -c $< -o $@
+
+%.o: %.cu
 	$(CC) $(CFLAGS) $(GENCODE_FLAGS)  -c $< -o $@
 
 all: 
@@ -35,8 +40,6 @@ test_MMult.x: $(TEST_OBJS) $(UTIL) parameters.h
 
 run:	
 	make all
-	export OMP_NUM_THREADS=1
-	export GOTO_NUM_THREADS=1
 	echo "version = '$(NEW)';" > output_$(NEW).m
 	./test_MMult.x >> output_$(NEW).m
 	cp output_$(OLD).m output_old.m
