improvement(project): dev benchmark

--- a/vulkan/makefile
+++ b/vulkan/makefile
@@ -1,5 +1,5 @@
 OLD  := MMult_vk_naive
-NEW := MMult_vk_1
+NEW := MMult_vk_naive
 KOMPUTE_BUILD := /home/khj/kompute/build
 
 CC         := g++
@@ -7,7 +7,6 @@ LINKER     := $(CC)
 # CFLAGS     := -std=c++17 -O0 -g -Wall
 CFLAGS     := -std=c++17 -O2 -g
 LDFLAGS    := -lm $(KOMPUTE_BUILD)/src/libkompute.a $(KOMPUTE_BUILD)/src/kompute_fmt/libfmt.a $(KOMPUTE_BUILD)/src/kompute_spdlog/libspdlog.a `pkg-config --libs vulkan` -lpthread
-# LDFLAGS    := -lm -lopenblas $(KOMPUTE_BUILD)/src/libkompute.a $(KOMPUTE_BUILD)/src/kompute_fmt/libfmt.a $(KOMPUTE_BUILD)/src/kompute_spdlog/libspdlog.a `pkg-config --libs vulkan` -lpthread
 
 UTIL       := copy_matrix.o \
               compare_matrices.o \
