--- a/cuda/makefile
+++ b/cuda/makefile
@@ -1,6 +1,6 @@
 OLD  := MMult_cuBLAS_1
 #NEW  := MMult_cuBLAS_1
-NEW := MMult_cuda_7
+NEW := MMult_cuda_3
 SMS ?= 70 75 80 86
 
 #
@@ -11,7 +11,8 @@ CC         := nvcc
 LINKER     := $(CC)
 #CFLAGS     := -O0 -g -Wall
 $(foreach sm,$(SMS),$(eval GENCODE_FLAGS += -gencode arch=compute_$(sm),code=sm_$(sm)))
-CFLAGS     := -std=c++17 -O2 -g
+# CFLAGS     := -std=c++17 -O0 -g -G
+CFLAGS     := -std=c++17 -O0 -g -G
 LDFLAGS    := -lm  -lcublas  -lopenblas
 
 UTIL       := copy_matrix.o \
